--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -5,22 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <title>Content Manager</title>
+    <script src="https://unpkg.com/decap-cms@latest/dist/decap-cms.js"></script>
   </head>
   <body>
-    <!-- Include the script that builds the page and powers Netlify CMS -->
-    <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
-    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
-    
-    <script>window.CMS_MANUAL_INIT = true;</script>
-    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
-    <script type="module">window.initCMS();</script>
-    
-    <!-- <script>
-      import CMS from "decap-cms-app";
-      // Initialize the CMS object
-      CMS.init();
-      // Now the registry is available via the CMS object.
-      CMS.registerPreviewTemplate("my-template", MyTemplate);
-    </script> -->
+    <script>
+      window.CMS_MANUAL_INIT = true; // Optional, depending on your setup
+      window.initCMS = function() {
+        CMS.init();
+      };
+    </script>
   </body>
 </html>
