--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -5,15 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <title>Content Manager</title>
-    <script src="https://unpkg.com/decap-cms@3.0.12/dist/decap-cms.js"></script>
+    <script src="https://unpkg.com/decap-cms@3.0.12/dist/decap-cms.js"></script> <!-- Revert to an older version -->
   </head>
   <body>
     <script>
-      // Initialize CMS only after DOM is fully loaded
       document.addEventListener("DOMContentLoaded", function() {
         window.CMS_MANUAL_INIT = true; // Optional if you're manually initializing
         window.initCMS = function() {
-          CMS.init();
+          if (window.CMS) {
+            CMS.init();
+          } else {
+            console.error("CMS is not defined.");
+          }
         };
         
         // Call the initialization function
