--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <title>Content Manager</title>
-    <script src="https://unpkg.com/decap-cms@3.0.12/dist/decap-cms.js"></script> <!-- Revert to an older version -->
+    <script src="https://unpkg.com/decap-cms@3.0.0/dist/decap-cms.js"></script> <!-- Ensure this is loaded first -->
   </head>
   <body>
     <script>
       document.addEventListener("DOMContentLoaded", function() {
         window.CMS_MANUAL_INIT = true; // Optional if you're manually initializing
         window.initCMS = function() {
-          if (window.CMS) {
+          if (CMS) { // Check for CMS directly in the global scope
             CMS.init();
           } else {
             console.error("CMS is not defined.");
@@ -23,5 +23,6 @@
         window.initCMS();
       });
     </script>
+    <script type="module" src="./index.js"></script> <!-- Include your JavaScript file -->
   </body>
 </html>
