--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -23,6 +23,7 @@
         window.initCMS();
       });
     </script>
+    <script src="./cms.js"></script> <!-- Use the bundled CMS file -->
     <script type="module" src="./index.js"></script> <!-- Include your JavaScript file -->
   </body>
 </html>
